<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whites2"

    >
    <include
        android:id="@+id/title_layout"
        layout="@layout/head_layout"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:layout_marginTop="5dp"
        >



     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:orientation="horizontal"
         android:gravity="center_vertical"

         >

         <ImageView
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@mipmap/faq"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/wenti"
             android:textColor="@color/black"
             android:textSize="14dp"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="10dp"
             />


     </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white2"
            android:layout_marginTop="10dp"
            />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="18dp"
        >

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/one"
          android:textColor="@color/best_seller"
          android:textSize="12dp"
          android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ones"
        android:textColor="@color/black5"
        android:textSize="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textColor="@color/best_seller"
        android:textSize="12dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twos"
        android:textColor="@color/black5"
        android:textSize="10dp"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threes"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fours"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fives"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixs"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sevens"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eights"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nines"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:textColor="@color/best_seller"
            android:textSize="12dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tens"
            android:textColor="@color/black5"
            android:textSize="10dp"
            />

      </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>
